--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "2023-group-lab-003",
   "version": "1.0.0",
   "description": "## Code Contributors",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest --coverage"
   },
