--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ dist
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/git,node,visualstudiocode
+/test-results/
+/playwright-report/
+/playwright/.cache/
