--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0"
   }
