--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.3",
     "jsdom": "^22.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mdb-ui-kit": "^6.3.0",
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "validator": "^13.9.0"
